# bulbul

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  install-dev.sh  install.ps1  package-lock.json  package.json  website-brief.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android-dev.yml  linux-dev.yml  macos-dev.yml  release.yml  windows-dev.yml
docs/: SMARTSCREEN.md
src/: App.css  App.jsx  LinuxSupportBanner.jsx  Overlay.css  Overlay.jsx  ScratchpadWindow.css  ScratchpadWindow.jsx  main.jsx  platform.js  theme.css  theme.js
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/deb/: postinst.sh  postrm.sh
src-tauri/icons/: icon.icns
src-tauri/rpm/: postinst.sh  postrm.sh
src-tauri/src/: audio.rs  config.rs  correction.rs  db.rs  desktop.rs  groq.rs  hotkey.rs  inject.rs  keyboard_hook.rs  lib.rs  linux_env.rs  main.rs  mobile.rs  telemetry.rs  uia.rs  window_info.rs
src-tauri/src/hotkey/: linux.rs  linux_evdev.rs  linux_portal.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/inject/: linux.rs  linux_portal_paste.rs  linux_uinput.rs  macos.rs  mod.rs
src-tauri/src/uia/: linux.rs  macos.rs  mod.rs
src-tauri/src/window_info/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: Combobox.css  Combobox.jsx  ConfirmDialog.css  ConfirmDialog.jsx  FeatureHero.jsx  HowToCard.jsx  TooltipProvider.css  TooltipProvider.jsx
src/onboarding/: OnboardingWizard.jsx  onboarding.css
src/views/: DictionaryView.jsx  HomeView.jsx  InsightsView.jsx  ScratchpadView.jsx  SettingsView.jsx  SnippetsView.jsx  StyleView.jsx  TransformsView.jsx
