[package]
name = "bulbul"
version = "1.0.0"
description = "Free, open-source Windows voice dictation powered by Groq"
authors = ["Bulbul contributors"]
edition = "2021"

[lib]
name = "bulbul_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
# OS-level RegisterHotKey, used because rdev's low-level hook is suppressed
# when Bulbul's own webview has focus.
tauri-plugin-global-shortcut = "2"
# Ensures only one Bulbul process can run at a time. Without this, two
# instances both watch the modifier-chord keyboard state, both fire on
# the same hotkey press, and writes to the shared SQLite + config race.
tauri-plugin-single-instance = "2"

# Local persistence (activity log + V2 data)
rusqlite = { version = "0.31", features = ["bundled"] }

# Word-boundary text substitution for the dictionary feature
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio
cpal = "0.15"
hound = "3.5"

# HTTP / Groq
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

# Clipboard
arboard = "3"

# Platform-specific dependencies. Top-level [dependencies] above must
# stay portable across Windows + macOS (+ eventually Linux); anything that
# only exists on one OS lives in a target-conditional block below.

# Win32: SendInput, GetForegroundWindow, UIA, GetAsyncKeyState — see
# src/{inject,window_info,uia,hotkey}/windows.rs and the Win32-gated
# helpers in lib.rs (bring_overlay_to_top, spawn_hover_watcher,
# work_area_bottom_logical).
[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Com",
]

[target.'cfg(target_os = "macos")'.dependencies]
# NSWorkspace + NSRunningApplication for foreground-app detection
# (window_info/macos.rs).
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
# objc2 runtime for class-method message sending into AVFoundation
# (mic-permission status check) and other classes not exposed by the
# higher-level objc2-* binding crates. Pinned to 0.6 to match what
# objc2-app-kit 0.3 transitively requires — a version mismatch here
# (0.5 vs 0.6) splits the encode/runtime traits and breaks every
# msg_send! call site at compile time.
objc2 = "0.6"
# Blocks for AVCaptureDevice.requestAccess completion handler. The
# requestAccess API requires a non-null block; we use RcBlock so the
# allocation outlives the async completion callback. Pinned to match
# objc2 0.6's block2 alignment.
block2 = "0.6"
# CGEvent / CGEventSource for synthesizing Cmd+V (inject/macos.rs)
# and live key-state polling in the hotkey path (hotkey/macos.rs).
core-graphics = "0.25"
# AXUIElement bindings for the correction-memory watcher
# (uia/macos.rs). Also pulls in core-foundation transitively, but we
# depend on it explicitly so the CFString::wrap_under_create_rule path
# stays stable across point releases.
accessibility-sys = "0.2"
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
# x11rb: pure-Rust X11 binding.
# - foreground-window discovery (window_info/linux.rs)
# - XTest extension for synthetic keyboard events (inject/linux.rs)
# Wayland-specific crates (ashpd, reis, atspi) added in Phase 3-5
# when the corresponding primitives land.
x11rb = { version = "0.13", features = ["xtest"] }

[dependencies.anyhow]
version = "1"

[dependencies.dirs]
version = "5"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.parking_lot]
version = "0.12"

# Anonymous IDs for opt-in telemetry. v4 only — never derived from identity.
[dependencies.uuid]
version = "1"
features = ["v4"]
